fix run smooth for prod and dev
